Closed Bug 610533 Opened 14 years ago Closed 9 years ago

crash [@ nsMsgDatabase::GetSearchResultsTable(char const*, int, nsIMdbTable**)] with virtual folder

Categories

(MailNews Core :: Database, defect)

x86
All
defect
Not set
critical

Tracking

(thunderbird38 affected, thunderbird39 affected, thunderbird40 affected, thunderbird41 fixed)

RESOLVED FIXED
Thunderbird 41.0
Tracking Status
thunderbird38 --- affected
thunderbird39 --- affected
thunderbird40 --- affected
thunderbird41 --- fixed

People

(Reporter: wsmwk, Assigned: rkent)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

crash [@ nsMsgDatabase::GetSearchResultsTable(char const*, int, nsIMdbTable**)]

bp-9d7721a6-6f9c-4019-842a-c1a542101026 v3.0.6

bp-5daa9521-c0b9-409f-ad8a-b8f402101027 v3.1.5
0	thunderbird.exe	nsMsgDatabase::GetSearchResultsTable	mailnews/db/msgdb/src/nsMsgDatabase.cpp:5499
1	thunderbird.exe	nsMsgDatabase::GetCachedHits	mailnews/db/msgdb/src/nsMsgDatabase.cpp:5512
2	thunderbird.exe	nsMsgXFVirtualFolderDBView::OnNewSearch	mailnews/base/src/nsMsgXFVirtualFolderDBView.cpp:455
3	thunderbird.exe	nsMsgSearchSession::Search	mailnews/base/search/src/nsMsgSearchSession.cpp:283
4	xpcom_core.dll	NS_InvokeByIndex_P	xpcom/reflect/xptcall/src/md/win32/xptcinvoke.cpp:102
5	thunderbird.exe	XPCWrappedNative::CallMethod	js/src/xpconnect/src/xpcwrappednative.cpp:2722
6	thunderbird.exe	XPC_WN_CallMethod	js/src/xpconnect/src/xpcwrappednativejsops.cpp:1740
7	js3250.dll	js_Invoke	js/src/jsinterp.cpp:1360
8	js3250.dll	js_Interpret	js/src/jsops.cpp:2240
9	js3250.dll	js_Invoke	js/src/jsinterp.cpp:1368
10	js3250.dll	js_InternalInvoke	js/src/jsinterp.cpp:1423
11	js3250.dll	JS_CallFunctionValue	js/src/jsapi.cpp:5114
12	thunderbird.exe	nsJSContext::CallEventHandler	dom/base/nsJSEnvironment.cpp:2197
m_mdbStore is probably null...
Assignee: nobody → bienvenu
Status: NEW → ASSIGNED
Crash Address	0x0 - so it is a null pointer...
(Note: bug# doesn't show up in socorro crash reports)
Crash Signature: [@ nsMsgDatabase::GetSearchResultsTable(char const*, int, nsIMdbTable**)]
signature  for current versions is nsMsgDatabase::GetSearchResultsTable(char const*, bool, nsIMdbTable**)
Crash Signature: [@ nsMsgDatabase::GetSearchResultsTable(char const*, int, nsIMdbTable**)] → [@ nsMsgDatabase::GetSearchResultsTable(char const*, int, nsIMdbTable**)] [@ nsMsgDatabase::GetSearchResultsTable(char const*, bool, nsIMdbTable**) ]
"Tried to open an individual email while compacting"
bp-fb63445d-8812-430e-848f-248e32121203

mwu@9538 5677 nsresult nsMsgDatabase::GetSearchResultsTable(const char *searchFolderUri, bool createIfMissing, nsIMdbTable **table)
hg@0 5678{
hg@0 5679  mdb_kind kindToken;
hg@0 5680  mdb_count numTables;
hg@0 5681  mdb_bool mustBeUnique;
hg@0 5682  mdb_err err = m_mdbStore->StringToToken(GetEnv(), searchFolderUri, &kindToken);
Assignee: mozilla → nobody
Status: ASSIGNED → NEW
This still appears. Is it easy to fix?

bp-5c2bbdb6-8266-4c41-a27e-992f42150417 (jeorg)
bp-13cadb64-1424-4925-a6b5-53bd32150507
Flags: needinfo?(m_kato)
Summary: crash [@ nsMsgDatabase::GetSearchResultsTable(char const*, int, nsIMdbTable**)] → crash [@ nsMsgDatabase::GetSearchResultsTable(char const*, int, nsIMdbTable**)] with virtual folder
Attached patch Null checkSplinter Review
Attachment #8603417 - Flags: review?(neil)
Assignee: nobody → rkent
Status: NEW → ASSIGNED
Comment on attachment 8603417 [details] [diff] [review]
Null check

nsMsgDatabase is nicely inconsistent about which error code to return when m_mdbStore is null...
Attachment #8603417 - Flags: review?(neil) → review+
http://hg.mozilla.org/comm-central/rev/a05b10d2a3f7
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 41.0
Attachment #8603417 - Flags: approval-comm-beta?
Attachment #8603417 - Flags: approval-comm-aurora?
Flags: needinfo?(m_kato)
I'm not sure we should take this in beta unless there is high reward
Comment on attachment 8603417 [details] [diff] [review]
Null check

On Wayne's recommendation, we won't uplift this at the moment.
Attachment #8603417 - Flags: approval-comm-beta?
Attachment #8603417 - Flags: approval-comm-aurora?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: